Update CSS and Index

--- a/Gold/index.html
+++ b/Gold/index.html
@@ -41,11 +41,11 @@
 		<p><a href="#addItem" data-role="button" data-icon="arrow-r" data-iconpos="right">Add Character</a></p>
 		<ul data-role="listview" data-theme="g" data-inset="true">
 			<li>Browse by Attribute</li>
-			<li><a href="acura.html"> <img src="images/Gender3.png"> Gender</a></li>
-			<li><a href="audi.html"> <img src="images/Race3.png"> Race</a></li>
-			<li><a href="bmw.html"> <img src="images/Height3.png"> Height</a></li>
-			<li><a href="bmw.html"> <img src="images/Birthdate3.png"> Birthdate</a></li>
-			<li><a href="bmw.html"> <img src="images/Glasses3.png"> Glasses</a></li>
+			<li><a href="#gender"> <img src="images/Gender3.png"> Gender</a></li>
+			<li><a href="#race"> <img src="images/Race3.png"> Race</a></li>
+			<li><a href="#height"> <img src="images/Height3.png"> Height</a></li>
+			<li><a href="#birthdate"> <img src="images/Birthdate3.png"> Birthdate</a></li>
+			<li><a href="#glasses"> <img src="images/Glasses3.png"> Glasses</a></li>
 		</ul>
 	</div>
 
@@ -160,20 +160,50 @@
 		</div>
 		<h4>05-17-13, Gary W. Hunter Looney</h4>
 	</div>
+
 </div>
 
 <!-- Browse -->
 <div data-role="page" id="browse" data-add-back-btn="true">
+
 	<div data-role="header" data-position="fixed">
 		<h1>Browse</h1>
 	</div>
-		
+		<ul data-role="listview" data-theme="g" data-inset="true">
+			<li>Browse by Attribute</li>
+			<li><a href="#gender"> <img src="images/Gender3.png"> Gender</a></li>
+			<li><a href="#race"> <img src="images/Race3.png"> Race</a></li>
+			<li><a href="#height"> <img src="images/Height3.png"> Height</a></li>
+			<li><a href="#birthdate"> <img src="images/Birthdate3.png"> Birthdate</a></li>
+			<li><a href="#glasses"> <img src="images/Glasses3.png"> Glasses</a></li>
+		</ul>
+
 	<div data-role="content">
 		<uldata-role="listview" data-inset="true">
-			
+	</div>
+	
+	<div data-role="footer" data-position="fixed" data-id="index">
+		<div data-role="navbar">
+			<ul>
+				<li><a href="#index" data-icon="home">Home</a></li>
+				<li><a href="#addItem" data-icon="plus">Add</a></li>
+				<li><a href="#search" data-icon="search">Search</a></li>
+				<li><a href="#browse" data-icon="grid">Browse</a></li>				
+			</ul>
+		</div>
+		<h4>05-17-13, Gary W. Hunter Looney</h4>
+	</div>
 
+</div>
 
+<!-- Gender -->
+<div data-role="page" id="gender" data-add-back-btn="true">
 
+	<div data-role="header" data-position="fixed">
+		<h1>Data Sorted by Gender</h1>
+	</div>
+	
+	<p>This is where the data would be sorted by Gender.</p>
 
 	<div data-role="footer" data-position="fixed" data-id="index">
 		<div data-role="navbar">
@@ -186,6 +216,99 @@
 		</div>
 		<h4>05-17-13, Gary W. Hunter Looney</h4>
 	</div>
+
+</div>
+
+<!-- Race -->
+<div data-role="page" id="race" data-add-back-btn="true">
+
+	<div data-role="header" data-position="fixed">
+		<h1>Data Sorted by Race</h1>
+	</div>
+	
+	<p>This is where the data would be sorted by Race.</p>
+
+	<div data-role="footer" data-position="fixed" data-id="index">
+		<div data-role="navbar">
+			<ul>
+				<li><a href="#index" data-icon="home">Home</a></li>
+				<li><a href="#addItem" data-icon="plus">Add</a></li>
+				<li><a href="#search" data-icon="search">Search</a></li>
+				<li><a href="#browse" data-icon="grid">Browse</a></li>				
+			</ul>
+		</div>
+		<h4>05-17-13, Gary W. Hunter Looney</h4>
+	</div>
+
+</div>
+
+<!-- Height -->
+<div data-role="page" id="height" data-add-back-btn="true">
+
+	<div data-role="header" data-position="fixed">
+		<h1>Data Sorted by Height</h1>
+	</div>
+	
+	<p>This is where the data would be sorted by Height.</p>
+
+	<div data-role="footer" data-position="fixed" data-id="index">
+		<div data-role="navbar">
+			<ul>
+				<li><a href="#index" data-icon="home">Home</a></li>
+				<li><a href="#addItem" data-icon="plus">Add</a></li>
+				<li><a href="#search" data-icon="search">Search</a></li>
+				<li><a href="#browse" data-icon="grid">Browse</a></li>				
+			</ul>
+		</div>
+		<h4>05-17-13, Gary W. Hunter Looney</h4>
+	</div>
+
+</div>
+
+<!-- Birthdate -->
+<div data-role="page" id="birthdate" data-add-back-btn="true">
+
+	<div data-role="header" data-position="fixed">
+		<h1>Data Sorted by Birthdate</h1>
+	</div>
+	
+	<p>This is where the data would be sorted by Birthdate.</p>
+
+	<div data-role="footer" data-position="fixed" data-id="index">
+		<div data-role="navbar">
+			<ul>
+				<li><a href="#index" data-icon="home">Home</a></li>
+				<li><a href="#addItem" data-icon="plus">Add</a></li>
+				<li><a href="#search" data-icon="search">Search</a></li>
+				<li><a href="#browse" data-icon="grid">Browse</a></li>				
+			</ul>
+		</div>
+		<h4>05-17-13, Gary W. Hunter Looney</h4>
+	</div>
+
+</div>
+
+<!-- Glasses -->
+<div data-role="page" id="glasses" data-add-back-btn="true">
+
+	<div data-role="header" data-position="fixed">
+		<h1>Data Sorted by Glasses</h1>
+	</div>
+	
+	<p>This is where the data would be sorted by Glasses.</p>
+
+	<div data-role="footer" data-position="fixed" data-id="index">
+		<div data-role="navbar">
+			<ul>
+				<li><a href="#index" data-icon="home">Home</a></li>
+				<li><a href="#addItem" data-icon="plus">Add</a></li>
+				<li><a href="#search" data-icon="search">Search</a></li>
+				<li><a href="#browse" data-icon="grid">Browse</a></li>				
+			</ul>
+		</div>
+		<h4>05-17-13, Gary W. Hunter Looney</h4>
+	</div>
+
 </div>
 
 
