--- a/Bronze/index.html
+++ b/Bronze/index.html
@@ -36,16 +36,16 @@
 		<center><a href="#addItem" > <img src="images/Elf2.png"> </a> </center>
 		<!-- Photo credit: Suus Wansink / Foter.com / CC BY   -->
 	
-
+<!-- I prefer the Thumbnail + Text for the list for the Gold because I think it gave more information -->
 		<input type="search" name="search" id="search-basic" value="" /></p>
 		<p><a href="#addItem" data-role="button" data-icon="arrow-r" data-iconpos="right">Add Character</a></p>
-		<ul data-role="listview" data-theme="g" data-inset="true">
+		<ul data-role="listview" data-theme="g" data-inset="false">
 			<li>Browse by Attribute</li>
-			<li><a href="#gender"> <img src="images/Gender3.png"> Gender</a></li>
-			<li><a href="#race"> <img src="images/Race3.png"> Race</a></li>
-			<li><a href="#height"> <img src="images/Height3.png"> Height</a></li>
-			<li><a href="#birthdate"> <img src="images/Birthdate3.png"> Birthdate</a></li>
-			<li><a href="#glasses"> <img src="images/Glasses3.png"> Glasses</a></li>
+			<li><a href="#gender"> <center><img src="images/Gender3.png"></center></a></li>
+			<li><a href="#race"> <center><img src="images/Race3.png"></center></a></li>
+			<li><a href="#height"> <center><img src="images/Height3.png"></center></a></li>
+			<li><a href="#birthdate"> <center><img src="images/Birthdate3.png"></center></a></li>
+			<li><a href="#glasses"> <center><img src="images/Glasses3.png"></center></a></li>
 		</ul>
 	</div>
 
@@ -169,13 +169,13 @@
 	<div data-role="header" data-position="fixed">
 		<h1>Browse</h1>
 	</div>
-		<ul data-role="listview" data-theme="g" data-inset="true">
+		<ul data-role="listview" data-theme="g" data-inset="false">
 			<li>Browse by Attribute</li>
-			<li><a href="#gender"> <img src="images/Gender3.png"> Gender</a></li>
-			<li><a href="#race"> <img src="images/Race3.png"> Race</a></li>
-			<li><a href="#height"> <img src="images/Height3.png"> Height</a></li>
-			<li><a href="#birthdate"> <img src="images/Birthdate3.png"> Birthdate</a></li>
-			<li><a href="#glasses"> <img src="images/Glasses3.png"> Glasses</a></li>
+			<li><a href="#gender"> <center><img src="images/Gender3.png"></center></a></li>
+			<li><a href="#race"> <center><img src="images/Race3.png"></center></a></li>
+			<li><a href="#height"> <center><img src="images/Height3.png"></center></a></li>
+			<li><a href="#birthdate"> <center><img src="images/Birthdate3.png"></center></a></li>
+			<li><a href="#glasses"> <center><img src="images/Glasses3.png"></center></a></li>
 		</ul>
 
 	<div data-role="content">
