--- a/Bronze/index.html
+++ b/Bronze/index.html
@@ -62,7 +62,7 @@
 	</div>
 </div>
 
-<!-- Add Item (Character) -->
+<!-- Add Item (Character) I wanted the footer not stationary at bottom -->
 <div data-role="page" id="addItem" data-add-back-btn="true">
 
 	<div data-role="header" data-position="fixed">
@@ -125,7 +125,7 @@
 
 
 
-	<div data-role="footer" data-position="fixed" data-id="index">
+	<div data-role="footer" data-id="index">
 		<div data-role="navbar">
 			<ul>
 				<li><a href="#index" data-icon="home">Home</a></li>
@@ -200,10 +200,11 @@
 <div data-role="page" id="gender" data-add-back-btn="true">
 
 	<div data-role="header" data-position="fixed">
-		<h1>Data Sorted by Gender</h1>
+		<h1>Sort by Gender</h1>
 	</div>
 	
-	<p>This is where the data would be sorted by Gender.</p>
+	<div data-role="button" data-icon="arrow-d" data-iconpos="right" id="produceData">Produce Data</div>
+
 
 	<div data-role="footer" data-position="fixed" data-id="index">
 		<div data-role="navbar">
@@ -223,10 +224,10 @@
 <div data-role="page" id="race" data-add-back-btn="true">
 
 	<div data-role="header" data-position="fixed">
-		<h1>Data Sorted by Race</h1>
+		<h1>Sort by Race</h1>
 	</div>
 	
-	<p>This is where the data would be sorted by Race.</p>
+	<div data-role="button" data-icon="arrow-d" data-iconpos="right" id="produceData">Produce Data</div>
 
 	<div data-role="footer" data-position="fixed" data-id="index">
 		<div data-role="navbar">
@@ -246,10 +247,10 @@
 <div data-role="page" id="height" data-add-back-btn="true">
 
 	<div data-role="header" data-position="fixed">
-		<h1>Data Sorted by Height</h1>
+		<h1>Sort by Height</h1>
 	</div>
 	
-	<p>This is where the data would be sorted by Height.</p>
+	<div data-role="button" data-icon="arrow-d" data-iconpos="right" id="produceData">Produce Data</div>
 
 	<div data-role="footer" data-position="fixed" data-id="index">
 		<div data-role="navbar">
@@ -269,10 +270,10 @@
 <div data-role="page" id="birthdate" data-add-back-btn="true">
 
 	<div data-role="header" data-position="fixed">
-		<h1>Data Sorted by Birthdate</h1>
+		<h1>Sort by Birthdate</h1>
 	</div>
 	
-	<p>This is where the data would be sorted by Birthdate.</p>
+	<div data-role="button" data-icon="arrow-d" data-iconpos="right" id="produceData">Produce Data</div>
 
 	<div data-role="footer" data-position="fixed" data-id="index">
 		<div data-role="navbar">
@@ -292,10 +293,10 @@
 <div data-role="page" id="glasses" data-add-back-btn="true">
 
 	<div data-role="header" data-position="fixed">
-		<h1>Data Sorted by Glasses</h1>
+		<h1>Sort by Glasses</h1>
 	</div>
 	
-	<p>This is where the data would be sorted by Glasses.</p>
+	<div data-role="button" data-icon="arrow-d" data-iconpos="right" id="produceData">Produce Data</div>
 
 	<div data-role="footer" data-position="fixed" data-id="index">
 		<div data-role="navbar">
@@ -312,9 +313,10 @@
 </div>
 
 
-	<!-- JavaScript under here -->
+<!-- JavaScript under here -->
 	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.3.1/jquery.mobile-1.3.1.min.js"></script>
+	<script src="js/json.js" type="text/javascript"></script>
 	<script src="js/main.js" type="text/javascript"></script>
 	
 </body>
